[package]
name = "most"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# num-bigint = "0.4"
primitive-types = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "io-util", "time"] }
async-channel = "1"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "rem"

[profile.release]
debug = true
