[package]
name = "most-uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { path = "../../uefi-rs" }
uefi-services = { path = "../../uefi-rs/uefi-services" }
log = "0.4"
most2 = { path = "../most2", default-features = false }
